<resources>
    <string name="app_name">HackatoonApp</string>

    <!--Экран регистрации-->
    <string name="registerTitle">Регистарция</string>
    <string name="firstNameHint">Имя</string>
    <string name="lastNameHint">Фамилия</string>
    <string name="EmailHint">Введите ваш E-mail</string>
    <string name="phone_number">Введите номер телефона</string>
    <string name="pass">Введите пароль</string>
    <string name="pass1">Подтвердите пароль</string>
    <string name="buttonText">Подтвердить</string>
    <string name="loginText">Уже есть аккаунт? Войти</string>

    <!--Экран авторизации-->
    <string name="loginLabel">Экран входа в задницу </string>
    <string name="loginEmail">Введите почтовый адрес</string>
    <string name="loginPass">Введите пароль</string>
    <string name="loginButton">Войти</string>
    <string name="registerText">Нет аккаунта? Создать</string>
    <string name="addHackathonButton">Добавить хакатон</string>

</resources>
