<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/registerTitle"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <!-- Контейнер для Имени и Фамилии -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/user_firstName"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:hint="@string/firstNameHint"
            android:textColor="@color/white"
            android:textColorHint="@color/hint"
            android:inputType="textPersonName"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/user_lastName"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:hint="@string/lastNameHint"
            android:textColor="@color/white"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint"
            android:padding="8dp"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/user_phone_number"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="phone"
        android:textColorHint="@color/hint"
        android:hint="@string/phone_number"/>

    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/hint"
        android:hint="@string/EmailHint"/>

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:textColorHint="@color/hint"
        android:hint="@string/pass"/>

    <EditText
        android:id="@+id/user_pass1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:textColorHint="@color/hint"
        android:hint="@string/pass1"/>

    <Button
        android:id="@+id/reg_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/buttonText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/goLoginDisplay"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/loginText"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
