<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/loginLabel"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/loginText"
        android:layout_marginTop="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/hint"
        android:hint="@string/loginEmail" />

    <EditText
        android:id="@+id/loginPass"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="@color/hint"
        android:hint="@string/loginPass"/>

    <Button
        android:id="@+id/login_button"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButton" />

    <TextView
        android:id="@+id/goRegisterDisplay"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/registerText"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
